--- a/Portfolio.html
+++ b/Portfolio.html
@@ -80,7 +80,7 @@
     </div>
 
     <footer>
-        <p>Contact: brandon@example.com</p>
+        <p>Contact: brandondelgado2026@gmail.com.com</p>
     </footer>
 </body>
 </html>
