--- a/Portfolio.html
+++ b/Portfolio.html
@@ -62,25 +62,25 @@
         <h2>Portfolio</h2>
 
         <div class="project">
-            <h3>Project Title 1</h3>
-            <p>Description of Project 1. What it is, what technologies were used, and what role you played in the project.</p>
+            <h3>Coding Classes</h3>
+            <p>Description of Project 1. In my coding classes i was tasked with making a adventure game where you could find hidden tresure and also have a climbing function, I was using a combination of C# and Unreal Engine to get the desired effects, I was given a baseline by professors but the level creation after the spawn point and character creation was all my work and added assets.</p>
         </div>
 
         <div class="project">
-            <h3>Project Title 2</h3>
-            <p>Description of Project 2. What it is, what technologies were used, and what role you played in the project.</p>
+            <h3>Freelance</h3>
+            <p>Description of Project 2. In my free time ive studied AI and learned coding from Outside contacts, Together we worked in C# Unreal Engine and Python on top of a few miscellaneous task, I would be given a base line code and would have to adjust it for a desired effect and would be assisted by them when stuck but most task were completed induvidually and then reviewed later.</p>
         </div>
 
         <div class="project">
-            <h3>Project Title 3</h3>
-            <p>Description of Project 3. What it is, what technologies were used, and what role you played in the project.</p>
+            <h3>Research Summary</h3>
+            <p>I was handed a set of information that i had to gather by a set date, Using Google and searching through a bulk of information to gather what was required, The task was completed entirely by me except for the topic i was gathering information for.</p>
         </div>
 
         <!-- Add more projects as needed -->
     </div>
 
     <footer>
-        <p>Contact: brandondelgado2026@gmail.com.com</p>
+        <p>Contact: brandondelgado2026@gmail.com</p>
     </footer>
 </body>
 </html>
